; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-ip-protocol-list.c_test_str.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-ip-protocol-list.c_test_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @test_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_str(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = call i32 @ip_protocol_from_name(i8* %3)
  %5 = call i32 @ip_protocol_to_name(i32 %4)
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @streq(i32 %5, i8* %6)
  %8 = call i32 @assert_se(i32 %7)
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @parse_ip_protocol(i8* %9)
  %11 = call i32 @ip_protocol_to_name(i32 %10)
  %12 = load i8*, i8** %2, align 8
  %13 = call i32 @streq(i32 %11, i8* %12)
  %14 = call i32 @assert_se(i32 %13)
  ret void
}

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @streq(i32, i8*) #1

declare dso_local i32 @ip_protocol_to_name(i32) #1

declare dso_local i32 @ip_protocol_from_name(i8*) #1

declare dso_local i32 @parse_ip_protocol(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
